--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bg-header {
+  height: 35vh;
+  background-image: url("./Image/Rick.png");
+  /*background-attachment: fixed;*/
+  background-repeat:no-repeat;
+  background-size: contain;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #212837;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cardSearch {
+  background-color: rgba(113, 155, 153, 0.651);
+  height: 70%;
+  width: 80%;
+  border-radius: 20px;
+  padding: 1rem;
+  backdrop-filter: blur(2px);
+  color: rgb(24, 20, 13);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1 {
+  font-size: 30px;
+  margin-bottom: 2rem;
+}
+.body {
+  background-color: #82bdca;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.body > h3 {
+  align-self: start;
+  padding-left: 10%;
+  padding-bottom: 20px;
+  color: rgb(2, 5, 10);
+  font-size: 25px;
+  margin: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (min-width: 800px) {
+  h1 {
+     font-size: 55px;
+     margin-top: 3rem;
   }
-  to {
-    transform: rotate(360deg);
+  .bg-header {
+     height: 70vh;
+  }
+  .cardSearch > p {
+     margin: 1rem 0;
+  }
+  .body > h3 {
+     align-self: start;
+     padding-left: 10%;
+     padding-bottom: 10px;
+     padding: 1rem 0 1rem 12%;
   }
 }
